# E344

./: README.md
A1_LaTeXTemplate/: App-A.aux  App-A.tex  App-B.aux  App-C.aux  Chapter0.aux  Chapter1.aux  Chapter1.tex  Chapter3.aux  Chapter3.tex  Chapter4.aux  Chapter5.aux  References.bib  e344_A1_report.bbl  e344_A1_report.blg  e344_A1_report.fdb_latexmk  e344_A1_report.lof  e344_A1_report.lot  e344_A1_report.tex
A1_LaTeXTemplate/Figures/: E344_Ass1VoltRegulator.emf  Example.pptx
Arduino/include/: hello.h
Arduino/src/: main.cpp
Code/timothy-app/: local.properties  settings.gradle
Code/timothy-mcu/: platformio.ini
Code/timothy-pc/: Cargo.toml
Code/timothy-pc/src/: bluetooth.rs  gamepad.rs  lib.rs  message.rs  serial.rs  timothy.rs
Code/timothy-pc/timothy-pc/: Cargo.toml
Documents/: .~lock.BlockDiagram.odg#  BlockDiagram.odg  DigitalMotorControllerBlockDiagram.odg  SerialCommunication.odg  calibration.ods  dac.ods
Hand Calculations/: .A1.autosave.xopp  A1.xopp
KiCAD/E344/: E344.kicad_prl  E344.kicad_pro  E344.kicad_sch
LTSpice/A1/: E344_Ass1_CurrSense.asc  E344_Ass1_CurrSense.net  E344_Ass1_CurrSense.op.raw  E344_Ass1_CurrSense.raw  PWL.csv
LTSpice/ChargingCircuit/: A6_cfg.txt  ChargeOnPWL.csv  E344_12345678_A6b.op.raw  E344_23905093_A6.asc  E344_23905093_A6.op.raw  E344_23905093_A6.raw  E344_23905093_A6b.op.raw  E344_23905093_A6b.raw  E344_BatteryReader.asc  PowerSupplyPWL.csv  (+8 more)
Python/: motorController_resistors.py  rangeSensor_gainStage.py
Report/: Chapter1.tex  Chapter2.tex  Chapter3.tex  Chapter4.tex  e344_A1_report.tex  references.bib
(+180 files in other folders)
