[package]
name = "timothy-pc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btleplug = "0.10.1"
clap = { version = "3.2.22", features = ["derive"] }
futures = "0.3.24"
serialport = "*"
tokio = { version = "1.21.1", features = ["full"] }
uuid = "1.1.2"
