[package]
name = "timothy-pc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btleplug = "0.10.1"
crossterm = "0.25.0"
fixed = "1.19.0"
futures = "0.3.24"
serialport = "*"
simple-error = "0.2.3"
tokio = { version = "1.21.1", features = ["full"] }
uuid = "1.1.2"
ux = "0.1.5"
