[package]
name = "timothy-pc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btleplug = "*"
crossterm = "0.25.0"
eframe = "0.19.0"
egui = "0.19.0"
fixed = "1.19.0"
futures = "0.3.24"
gilrs = "0.9.0"
serialport = "*"
simple-error = "0.2.3"
tokio = { version = "*", features = ["full"] }
uuid = "1.1.2"
ux = "0.1.5"
